[package]
name = "Fmto"
version = "0.1.0"
edition = "2021"
description = "A configuration file format converter"
authors = ["Your Name"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
configparser = "3.0"
quick-xml = { version = "0.31", features = ["serialize"] }
dotenvy = "0.15"
hocon = "0.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
eframe = { version = "0.26", features = ["default"] }
egui = "0.26"
rfd = "0.13"     # 文件对话框
